cabal-version: 1.12
name:          penrose-tiles
version:       0.0.0
build-type:    Simple

executable penrose-tiles
  main-is:          Main.hs
  other-modules:    Paths_penrose_tiles
  ghc-options:      -Wall
  build-depends:
      base              >=4     && <5
    , diagrams
    , diagrams-contrib  >=1.4.4
    , diagrams-lib
    , diagrams-svg

  default-language: GHC2021
